--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:3001",
+  "proxy": "http://server:3001",
   "private": true,
   "scripts": {
     "dev": "next dev",
